tests/snapshots/output_validation__error_envelope_snapshot.snap
---
source: tests/output_validation.rs
expression: json_str
---
{
  "ok": false,
  "engine": "postgres",
  "command": "query",
  "error": {
    "code": "QUERY_FAILED",
    "message": "Column 'invalid' does not exist"
  },
  "meta": {
    "contract_version": "1",
    "execution_ms": 0
  }
}
