tests/snapshots/output_validation__error_envelope_snapshot_config_error.snap
---
source: tests/output_validation.rs
expression: json_str
---
{
  "ok": false,
  "engine": "",
  "command": "connect",
  "error": {
    "code": "CONFIG_ERROR",
    "message": "Configuration error: connection 'prod' not found"
  }
}
