tests/snapshots/output_validation__error_envelope_snapshot_connection_failed.snap
---
source: tests/output_validation.rs
expression: json_str
---
{
  "ok": false,
  "engine": "postgres",
  "command": "connect",
  "error": {
    "code": "CONNECTION_FAILED",
    "message": "Connection failed: could not connect to server"
  }
}
