tests/snapshots/output_validation__error_envelope_snapshot_engine_error.snap
---
source: tests/output_validation.rs
expression: json_str
---
{
  "ok": false,
  "engine": "mysql",
  "command": "query",
  "error": {
    "code": "ENGINE_ERROR",
    "message": "Engine error (mysql): lost connection to server"
  }
}
