tests/snapshots/output_validation__error_envelope_snapshot_query_failed.snap
---
source: tests/output_validation.rs
expression: json_str
---
{
  "ok": false,
  "engine": "postgres",
  "command": "query",
  "error": {
    "code": "QUERY_FAILED",
    "message": "Query execution failed: relation \"users\" does not exist"
  }
}
