tests/snapshots/output_validation__success_envelope_snapshot.snap
---
source: tests/output_validation.rs
assertion_line: 237
expression: json_str
---
{
  "ok": true,
  "engine": "sqlite",
  "command": "test",
  "data": {
    "result": "success",
    "value": 42
  },
  "meta": {
    "contract_version": "1",
    "execution_ms": 100,
    "rows_returned": 5
  }
}
